# Graph_UG-beta

./: .gitignore  BUILD_EXE.md  GraphUG.spec  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/controllers/: main_controller.py
app/core/: __init__.py
app/core/exceptions/: __init__.py  parse_errors.py
app/core/interfaces/: __init__.py  i_controller.py  i_evaluator.py  i_renderer.py
app/core/models/: __init__.py  expression.py  math_result.py  plot_command.py
app/gui/: __init__.py  main_window.py
app/gui/dialogs/: about_dialog.py  insert_calculus_dialog.py  insert_matrix_dialog.py  insert_plot_dialog.py  insert_snippet_dialog.py  insert_vector_dialog.py  settings_dialog.py
app/gui/styles/: __init__.py  dark_theme.py  pyqtgraph_config.py  (+1 more)
app/math_engine/: __init__.py  gpu_backend.py  numerical.py  symbolic.py
app/parser/: __init__.py  ast_nodes.py  evaluator.py
app/renderer/: __init__.py  pyqtgraph_3d_renderer.py  pyqtgraph_renderer.py
app/utils/: logger.py
docs/: GraphUG_Documentation.ipynb  Reporte_GraphUG_Parte1.md
scripts/: build_exe.bat  build_exe.ps1
tests/controllers/: test_controller.py
tests/core/: test_models.py
tests/gui/: __init__.py
tests/math_engine/: __init__.py  test_numerical.py  test_symbolic.py  test_symbolic_phase4.py  test_symbolic_phase6.py
tests/parser/: test_evaluator.py  test_evaluator_phase2.py  test_evaluator_phase3.py  test_evaluator_phase4.py  test_evaluator_phase5.py  test_evaluator_phase6.py
tests/renderer/: test_renderer.py  test_renderer_3d.py  test_renderer_phase4.py
(+7 files in other folders)
